--- a/FE_Onboarding/index.html
+++ b/FE_Onboarding/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Plataforma de onboarding de servicios por BDO Costa Rica para la gestión de tareas de clientes."
+    />
+    <meta name="author" content="BDO Costa Rica" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="76x76" href="/assets/icon.png" />
+
+    <!-- Manifest para PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <title>Onboarding Services by BDO</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <noscript>
+      ⚠️ Esta aplicación requiere JavaScript para funcionar correctamente.
+    </noscript>
+
+    <div
+      id="root"
+      role="main"
+      aria-label="Aplicación de Onboarding de Servicios"
+    ></div>
+
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
